critters nerf + loc changes 1

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -27,6 +27,9 @@
 	TEC_EVOLVED_DONATIONS:0 "If you enjoyed this mod, consider supporting it! £unity£"
 
 # --------------------------- SCRIPTED LOC --------------------------------
+	tec_jump_empty:0 "\n\n"
+
+
 	tec_loc_energy:0 "£energy£ $energy$"
 	tec_loc_minerals:0 "£minerals£ $minerals$"
 	tec_loc_food:0 "£food£ $food$"
