more loc shenanigans

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -1,5 +1,155 @@
 ﻿l_english:
 
+# ------------------------------------------------------------
+# MISC
+# ------------------------------------------------------------
+
+
+
+# ------------------------------------------------------------
+# Colony Types
+# ------------------------------------------------------------
+ # ------------------------------------------------- Habitats
+
+ # /
+ # ------------------------------------------------- Ecumenopoleis
+  col_ecu_trade:0 "Ecumenopolis Trade"
+  col_ecu_trade_desc:0 "A vast city-planet that specializes in commerce and business"
+
+	col_ecu_mix:0 "Ecumenopolis"
+	col_ecu_mix_desc:0 "This city planet has not been specialized for any particular industry"
+
+	col_ecu_foundry:0 "Ecumenopolis Foundry"
+	col_ecu_foundry_desc:0 "A vast city-planet that specializes in the ceaseless production of alloys"
+
+	col_ecu_factory:0 "Ecumenopolis Industrial"
+	col_ecu_factory_desc:0 "A vast city-planet that specializes in the ceaseless production of consumer goods"
+
+	# Locked
+	col_ecu_research:0 "Academic Ecumenopolis"
+	col_ecu_research_desc:0 "A vast city-planet that specializes in the latest cutting-edge research."
+
+	col_ecu_spec_military:0 "Military Ecumenopolis"
+	col_ecu_spec_military_desc:0 "Both a megaforge and naval strategic position, this ecumenopolis embodies the martial spirit."
+
+	col_ecu_spec_admin:0 "Administrative Ecumenopolis"
+	col_ecu_spec_admin_desc:0 "A vast city-planet with a vast amount of administrative affairs."
+ # /
+ # ------------------------------------------------- Habitats
+	col_tec_habitat_food:0 "Hydroponic Station"
+	col_tec_habitat_food_desc:0 "An artificial deep-space arcology dedicated to the generation of biomatter and organic sustain for a large population or production."
+ # /
+ # ------------------------------------------------- RW
+	col_ring_mix:0 "Ring World"
+	col_ring_mix_desc:0 "An immense ringworld, its massive area spread between all matters of produce"
+
+	col_tec_ring_mining:0 "Replication Section"
+	col_tec_ring_mining_desc:0 "The matter replication districts of this ringworld section work at a higher capacity than usual."
+
+	col_ring_research:0 "Research Ring World"
+	col_ring_research_desc:0 "This entire ring world section is dedicated to the advancement of knowledge"
+		#Researchers upkeep - district cost - district speed
+	col_ring_industrial:0 "Industrial Ring World"
+	col_ring_research_desc:0 "This entire ring world section is dedicated to the advancement of knowledge"
+		#Alloy cg jobs upkeep- district cost - district speed
+
+	col_ring_farming:0 "Agriculture Ring World"
+	col_ring_farming_desc:0 "Endless fields are supported by the infrastructure of this ring world section to maximize growing potential"
+	# food output +10%, farming district cost -10%, farming district speed +25%
+
+	col_ring_replicator:0 "Matter Replicator Ring World"
+	col_ring_replicator_desc:0 "The humbling vibrations of the never-ending matter replication process makes this ringworld a particular place to live.l"
+	# minerals output +10%, replicator district cost -10%, replicator district speed +25%
+
+	col_ring_generator:0 "Generator Ring World"
+	col_ring_generator_desc:0 "Linking generator segments together across this ring world section provides efficiencies of scale"
+	# energy output +10%, generator district cost -10%, generator district speed +25%
+
+	col_ring_trade:0 "Commercial Ring World"
+	col_ring_trade_desc:0 "If you can't buy it here, it either doesn't exist or you didn't really want it anyway"
+	# clerks produce +8 extra trade, city/megacity district cost -10%, district speed +25%
+ # /
+ # ------------------------------------------------- Elysium
+	col_tec_ely_regular:0 "Elysium"
+	col_tec_ely_regular_desc:1 "An artificial arcology built around a planet, serving as extension of it."
+
+	col_tec_ely_admin:0 "Administrative Elysium"
+	col_tec_ely_admin_desc:1 "This is deprecated."
+	col_tec_ely_admin_custom:1 "deprecated."
+
+	col_tec_ely_trade:0 "Trade Elysium"
+	col_tec_ely_trade_desc:1 "This orbital arcology serves as a center of trade for the whole planet, greatly boosting economic output of both."
+	col_tec_ely_trade_custom:1 "e."
+
+	col_tec_ely_resort:0 "Resort Elysium"
+	col_tec_ely_resort_desc:1 "This Elysium serves as an idyllic place to reside and thrive, with multiple ways of ensuring a pleasant and comfortable life."
+	col_tec_ely_resort_custom:1 "Replaces £district£ Industrial districts with £district£ Resort districts, increasing the planet£ £amenities£ Amenities and providing £job_tec_hedonist£ Hedonist Jobs, which produces... nothing, but also have literally no upkeep.\nOrbited planet £trade_value£ Trade Value and £amenities£ Amenities increased by §G100%§!.\n\n§RThis designation can't be changed during a large amount of time (10 years) since it's enacted.§!"
+
+	col_tec_ely_forge:0 "Forge Elysium"
+	col_tec_ely_forge_desc:1 "Most of the surface and interior of this Elysium is occupied by enormous alloy refineries and machinery, greatly boosting metallurgists capacities."
+	col_tec_ely_forge_custom:1 "Each £district£ Industrial districts provides §Y3§! additional £job_foundry£ Metallurgist Jobs, but has a additional monthly upkeep of §Y1§! £volatile_motes£ Volatile Mote.\n£job_foundry£ Metallurgist Jobs Upkeep reduced by §G20%§!.\n\n§RThis designation can't be changed during a large amount of time (10 years) since it's enacted.§!"
+
+	col_tec_ely_factory:0 "Factory Elysium"
+	col_tec_ely_factory_desc:1 "While idyllic on the surface, most of the interior and unseen parts of this Elysium hosts multiple factories that create commodities and goods for suiting a whole empire."
+	col_tec_ely_factory_custom:1 "Each £district£ Industrial districts provides §Y3§! additional £job_artisan£ Artisan Jobs, but has a additional monthly upkeep of §Y1§! £rare_crystals£ Rare crystal.\n£job_artisan£ Artisan Jobs Upkeep reduced by §G20%§!.\n\n§RThis designation can't be changed during a large amount of time (10 years) since it's enacted.§!"
+
+	col_tec_ely_research:0 "Research Elysium"
+	col_tec_ely_research_desc:1 "While idyllic on the surface, most of the interior and unseen parts of this Elysium hosts a myriad of research labs rushing out the finest technologies in safe environments."
+	col_tec_ely_research_custom:1 "Replaces £district£ Industrial districts with £district£ Research districts, providing £job_researcher£ Researcher Jobs and having an additional monthly upkeep of §Y1§! £exotic_gases£ Exotic gas.\n£job_researcher£ Researcher Jobs Upkeep reduced by §G20%§!.\n\n§RThis designation can't be changed during a large amount of time (10 years) since it's enacted.§!"
+
+	col_tec_ely_shipyard:0 "Shipyard Elysium"
+	col_tec_ely_shipyard_desc:1 "An entire world dedicated to the ever-expanding needs of the bureaucracy."
+	col_tec_ely_shipyard_custom:1 "£district£ City districts provides §G1§! £mod_country_admin_cap_add£ Administrative Job.\n£mod_country_admin_cap_add£ Administrative Jobs Upkeep reduced by §G10%§!. \n£pop£ Pop Ethics Shift Chance reduced by §G20%§!."
+ # /
+ # ------------------------------------------------- Rimworld
+	col_tec_rimworld_regular:0 "Rim World"
+	col_tec_rimworld_regular_desc:1 "A colony far away from the empire capital, this world is conceded to non-state organizations in order to ease its management and cohesion.\nSome try to maintain stability on their own, some take the ''legal'' affairs on their own."
+	#col_tec_rimworld_regular_custom:1 "TO DO"
+
+	col_tec_rimworld_gestalt:0 "Rim World"
+	col_tec_rimworld_gestalt_desc:1 "A colony far away from the gestalt capital, this world is conceded to semi-autonomous high-rank drones in order to ease its management and cohesion.\nWhile it retains a high amoount of stability, it is natural on it to develop higher degrees of deviancy than normal."
+	#col_tec_rimworld_gestalt_custom:1 "TO DO"
+ # /
+ # ------------------------------------------------- Coreworld
+	col_tec_coreworld_regular:0 "Core World"
+	col_tec_coreworld_regular_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_regular_custom:1 "TO DO"
+
+	col_tec_coreworld_regular_menial:0 "Production Core World"
+	col_tec_coreworld_regular_menial_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_regular_menial_custom:1 "TO DO"
+
+	col_tec_coreworld_regular_industrial:0 "Industrial Core World"
+	col_tec_coreworld_regular_industrial_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_regular_industrial_custom:1 "TO DO"
+
+	col_tec_coreworld_regular_development:0 "Development Core World"
+	col_tec_coreworld_regular_development_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_regular_development_custom:1 "TO DO"
+
+	col_tec_coreworld_gestalt:0 "Core World"
+	col_tec_coreworld_gestalt_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_gestalt_custom:1 "TO DO"
+
+	col_tec_coreworld_gestalt_menial:0 "Production Core World"
+	col_tec_coreworld_gestalt_menial_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_gestalt_menial_custom:1 "TO DO"
+
+	col_tec_coreworld_gestalt_industrial:0 "Industrial Core World"
+	col_tec_coreworld_gestalt_industrial_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_gestalt_industrial_custom:1 "TO DO"
+
+	col_tec_coreworld_gestalt_development:0 "Development Core World"
+	col_tec_coreworld_gestalt_development_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+	#col_tec_coreworld_gestalt_development_custom:1 "TO DO"
+ # /
+#/
+
+
+
+# ------------------------------------------------------------
+# TO SORT
+# ------------------------------------------------------------
 pm_tec_pragmatic_development_1:0 "Pragmatic Development I"
 pm_tec_pragmatic_development_1_desc:0 "Increase the planet's size by 1 tile, reducing it's §YHabitability§! by 2%."
 pm_tec_pragmatic_development_2:0 "Pragmatic Development II"
@@ -164,8 +314,6 @@ requires_habitable_planet:0 "$TRIGGER_FAIL$Due to the characteristics of this ki
 # Planet asignations
 
  #colony types
- col_ecu_trade:0 "Ecumenopolis Trade"
- col_ecu_trade_desc:0 "A vast city-planet that specializes in commerce and business"
 
 
 
