--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -127,7 +127,16 @@
 
 	tec_loc_terraform_speed:0 "£mod_country_terraform_speed_mult£ $MOD_COUNTRY_TERRAFORM_SPEED_MULT$"
 
+	tec_loc_building:0 "£building£ Building"
+	tec_loc_building_plural:0 "£building£ Buildings"
+	tec_loc_building_icon:0 "£building£"
 	tec_loc_capital_tier:0 "£building£ Capital Tier"
+	tec_loc_district:0 "£district£ District"
+	tec_loc_district_plural:0 "£district£ Districts"
+	tec_loc_district_icon:0 "£district£"
+
+	tec_loc_planet_ascension:0 "£unity£ Planet Ascension"
+	tec_loc_planet_ascension_plural:0 "£unity£ Planet Ascensions"
 
 	tec_loc_xenocytes:0 "£tec_genetics_icon£ §YXenocytes§!"
 
