Some small fixes

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -315,7 +315,7 @@
 	#trait_mol_shell_desc:0 "§LA thick layer of solid material encases some parts or the whole body of this species, making a excellent defensive barrier against attackers, making every member a kind of slow mobile fortress.§!"
 	trait_tec_siliceous:0 "Siliceous Molt"
 	trait_tec_siliceous_desc:0 "§LBy chemical processing of inert material, this species segregate hardened mineral substances used for different ways of protection or general corporeal composition.§!"
-	TRAIT_TEC_SILICEOUS_EFFECT:0 "§EMolluscoid§! $MOD_POP_HOUSING_USAGE_MULT$: §G-10%§!"
+	TRAIT_TEC_SILICEOUS_EFFECT:0 "$MOD_POP_HOUSING_USAGE_MULT$ if §EMolluscoid§! Species: §G-10%§!"
 
 	trait_mol_social:0 "A"
 	trait_mol_social_desc:0 "§La.§!"
@@ -344,7 +344,7 @@
  # Lithoid
 	trait_tec_lithophytic:0 "Lithophytic Symbiosis"
 	trait_tec_lithophytic_desc:0 "§LThis Lithoid species has a deep symbiotic relation with diverse mycelial and vegetal lifeforms, allowing the mutual benefit of protection and nourishment.§!"
-	TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "§EPlantoid§! $mod_planet_pops_upkeep_mult$: §G-10%§!"
+	TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "$mod_planet_pops_upkeep_mult$ if §EPlantoid§! £pop£ Pops on Planet: §G-10%§!"
 # /
 
 
