More loc changes boogaloo

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -41,6 +41,44 @@
 
 	MESSAGE_TEC_METAMORPHED_POPS_TITLE:0 "Pops metamorphosed"
 	MESSAGE_TEC_METAMORPHED_POPS:1 "We have metamorphed $VALUE|Y$ £pops£ Pops to our species on $PLANET|Y$."
+ # /
+ # Job icons
+	# Admin Swaps
+	job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
+	job_tec_paperwork_priest_icon:0 "£job_tec_paperwork_priest£"
+	job_tec_atom_priest_icon:0 "£job_tec_atom_priest£"
+	job_tec_paranormal_priest_icon:0 "£job_tec_paranormal_priest£"
+
+	job_manager_icon:0 "£job_manager£"
+	job_bureaucrat_icon:0 "£job_bureaucrat£"
+	job_tec_ai_operator_icon:0 "£job_tec_ai_operator£"
+	job_tec_ai_ordinator_icon:0 "£job_tec_ai_ordinator£"
+
+	job_tec_resonance_drone_icon:0 "£job_tec_resonance_drone£"
+	job_synapse_drone_icon:0 "£job_synapse_drone£"
+	job_tec_network_drone_icon:0 "£job_tec_network_drone£"
+
+	tec_job_priest_and_admin_with_icon:0 "[GetPriestIcon] [GetPriest] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
+	tec_job_priest_and_admin_plural_with_icon:0 "[GetPriestIcon] [GetPriestPlural] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
+
+	tec_job_admin_with_icon:0 "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
+	tec_job_admin_plural_with_icon:0 "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
+
+	tec_job_synapse_with_icon:0 "[GetSynapseIcon] [GetSynapse]"
+	tec_job_synapse_plural_with_icon:0 "[GetSynapseIcon] [GetSynapsePlural]"
+
+	tec_job_agri_drone_and_aqua_drone:0 "$job_agri_drone$ and £job_angler£ $job_tec_aqua_drone$"
+	tec_job_agri_drones_and_aqua_drones:0 "$job_agri_drone_plural$ and £job_angler£ $job_tec_aqua_drone_plural$"
+
+	tec_job_miner_and_reef_miner:0 "$job_miner$ and £tec_reef_drone£ $tec_reef_miner$"
+	tec_job_miners_and_reef_miners:0 "$job_miner_plural$ and £tec_reef_drone£ $job_tec_reef_miner_plural$"
+
+	tec_job_mining_drone_and_reef_drone:0 "$job_mining_drone$ and £tec_reef_drone£ $job_tec_reef_drone$"
+	tec_job_mining_drones_and_reef_drones:0 "$job_mining_drone_plural$ and £tec_reef_drone£ $job_tec_reef_drone_plural$"
+
+	tec_job_technician_drone_and_thermogenerator_drone:0 "$job_technician_drone$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone$"
+	tec_job_technician_drones_and_thermogenerator_drones:0 "$job_technician_drone_plural$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
+ # /
 
 # /
 
@@ -3469,43 +3507,6 @@
 
 	mod_tec_pop_upkeep_base_add:0 "Base £pop£ Pop Upkeep"
 
-# Leaders
-
-	tec_starting_level: "Starting Level"
-	mod_tec_leader_starting_skill_add: "Leader $tec_starting_level$"
-	mod_tec_admiral_starting_skill_add: "$admiral_with_icon$ $tec_starting_level$"
-	mod_tec_general_starting_skill_add: "$general_with_icon$ $tec_starting_level$"
-	mod_tec_governor_starting_skill_add: "$governor_with_icon$ $tec_starting_level$"
-	mod_tec_scientist_starting_skill_add: "$scientist_with_icon$ $tec_starting_level$"
-
-	tec_starting_traits: "Starting Traits"
-	mod_tec_leader_starting_traits_add: "Leader $tec_starting_traits$"
-	mod_tec_admiral_starting_traits_add: "$admiral_with_icon$ $tec_starting_traits$"
-	mod_tec_general_starting_traits_add: "$general_with_icon$ $tec_starting_traits$"
-	mod_tec_governor_starting_traits_add: "$governor_with_icon$ $tec_starting_traits$"
-	mod_tec_scientist_starting_traits_add: "$scientist_with_icon$ $tec_starting_traits$"
-
-	tec_max_negative_traits: "Maximum Negative Traits"
-	mod_tec_leader_negative_traits_add: "Leader $tec_max_negative_traits$"
-	mod_tec_admiral_negative_traits_add: "$admiral_with_icon$ $tec_max_negative_traits$"
-	mod_tec_general_negative_traits_add: "$general_with_icon$  $tec_max_negative_traits$"
-	mod_tec_governor_negative_traits_add: "$governor_with_icon$ $tec_max_negative_traits$"
-	mod_tec_scientist_negative_traits_add: "$scientist_with_icon$ $tec_max_negative_traits$"
-	mod_tec_aiauth_node_negative_traits_add: "$tec_loc_ai_node$ $tec_max_negative_traits$"
-
-	mod_tec_ruler_only_councilor_traits: "$tec_loc_ruler_plural$ can only get $tec_loc_councilor_traits$"
-	mod_tec_councilor_only_councilor_traits: "$tec_loc_councilor_plural$ can only get $tec_loc_councilor_traits$"
-	mod_tec_leader_only_councilor_traits: "Leader can only get $tec_loc_councilor_traits$"
-	mod_tec_leader_only_normal_traits: "Leader can only get $tec_loc_normal_traits$"
-
-	tec_not_count_towards_leader_cap: "not count towards Leader Capacity"
-
-	mod_tec_leader_not_count_towards_leader_cap: "Leader does $tec_not_count_towards_leader_cap$"
-	mod_tec_councilor_not_count_towards_leader_cap: "$tec_loc_councilor_plural$ do $tec_not_count_towards_leader_cap$"
-	mod_tec_admiral_not_count_towards_leader_cap: "$admiral_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
-	mod_tec_general_not_count_towards_leader_cap: "$general_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
-	mod_tec_governor_not_count_towards_leader_cap: "$governor_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
-	mod_tec_scientist_not_count_towards_leader_cap: "$scientist_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
 
 # Ai auth
 	tec_ai_power_weight: "$tec_loc_sr_tec_ai_power$ Weight"
@@ -3525,47 +3526,6 @@
 	mod_tec_job_clerk_trade_value_add: "$mod_planet_clerks_trade_value_produces_add$"
 	mod_tec_job_clerk_amenities_add: "$mod_planet_clerks_amenities_produces_add$"
 # /
-# Admin locs
-
-	job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
-	job_tec_paperwork_priest_icon:0 "£job_tec_paperwork_priest£"
-	job_tec_atom_priest_icon:0 "£job_tec_atom_priest£"
-	job_tec_paranormal_priest_icon:0 "£job_tec_paranormal_priest£"
-
-	job_manager_icon:0 "£job_manager£"
-	job_bureaucrat_icon:0 "£job_bureaucrat£"
-	job_tec_ai_operator_icon:0 "£job_tec_ai_operator£"
-	job_tec_ai_ordinator_icon:0 "£job_tec_ai_ordinator£"
-
-	job_tec_resonance_drone_icon:0 "£job_tec_resonance_drone£"
-	job_synapse_drone_icon:0 "£job_synapse_drone£"
-	job_tec_network_drone_icon:0 "£job_tec_network_drone£"
-
-
-	tec_job_priest_and_admin_with_icon:0 "[GetPriestIcon] [GetPriest] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
-
-	tec_job_priest_and_admin_plural_with_icon:0 "[GetPriestIcon] [GetPriestPlural] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
-
-	tec_job_admin_with_icon:0 "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
-
-	tec_job_admin_plural_with_icon:0 "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
-
-	tec_job_synapse_with_icon:0 "[GetSynapseIcon] [GetSynapse]"
-
-	tec_job_synapse_plural_with_icon:0 "[GetSynapseIcon] [GetSynapsePlural]"
-
-	tec_job_agri_drone_and_aqua_drone:0 "$job_agri_drone$ and £job_angler£ $job_tec_aqua_drone$"
-	tec_job_agri_drones_and_aqua_drones:0 "$job_agri_drone_plural$ and £job_angler£ $job_tec_aqua_drone_plural$"
-
-	tec_job_miner_and_reef_miner:0 "$job_miner$ and £tec_reef_drone£ $tec_reef_miner$"
-	tec_job_miners_and_reef_miners:0 "$job_miner_plural$ and £tec_reef_drone£ $job_tec_reef_miner_plural$"
-
-	tec_job_mining_drone_and_reef_drone:0 "$job_mining_drone$ and £tec_reef_drone£ $job_tec_reef_drone$"
-	tec_job_mining_drones_and_reef_drones:0 "$job_mining_drone_plural$ and £tec_reef_drone£ $job_tec_reef_drone_plural$"
-
-	tec_job_technician_drone_and_thermogenerator_drone:0 "$job_technician_drone$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone$"
-	tec_job_technician_drones_and_thermogenerator_drones:0 "$job_technician_drone_plural$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
-
 
 # Jobs WIP
 
