--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -173,6 +173,14 @@
 	tec_trait_upkeep_scale_with_skill: "§YTrait upkeep scale with §HLeader Skill§!§!"
 	tec_trait_upkeep_scale_with_negatives: "§YTrait upkeep scale with §RNegative Traits§! suppressed till now§!"
 
+ # Espionage
+	tec_loc_espionage_interdiction_icon:0 "£trigger_tec_espionage_interdiction£"
+	tec_loc_espionage_interdiction:0 "$tec_loc_espionage_interdiction_icon$ Operation Interdiction"
+	tec_loc_espionage_interdiction_desc:0 "$tec_loc_espionage_interdiction$ is a value (%) of extra chance of discovering an hostile covert action on a planet or territory before it's executed"
+	tec_loc_espionage_bypass_icon:0 "£trigger_tec_espionage_bypass"
+	tec_loc_espionage_bypass:0 "$tec_loc_espionage_bypass_icon$ Operation Bypass"
+	tec_loc_espionage_bypass_desc:0 "$tec_loc_espionage_bypass$ is a value (%) of extra chance of overcoming target defenses and intelligence while executing a covert action on a planet or territory, delaying it's discovery until it's too late to react."
+
 # --------------------------- MACHINE COMPUTING POWER --------------------------------
 	TEC_PROCESSCAP_WINDOW_TITLE: "Processing Capacity"
 	TEC_PROCESSCAP_WINDOW_DESC: "Administers the empire §YProcessing Capacity§!."
