--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -1,7 +1,44 @@
 ﻿l_english:
 # Misc
 # ------------------------------------------------------------
+ # Mods
+	tec_starting_level: "Starting Level"
+	mod_tec_leader_starting_skill_add: "Leader $tec_starting_level$"
+	mod_tec_admiral_starting_skill_add: "$admiral_with_icon$ $tec_starting_level$"
+	mod_tec_general_starting_skill_add: "$general_with_icon$ $tec_starting_level$"
+	mod_tec_governor_starting_skill_add: "$governor_with_icon$ $tec_starting_level$"
+	mod_tec_scientist_starting_skill_add: "$scientist_with_icon$ $tec_starting_level$"
 
+	tec_starting_traits: "Starting Traits"
+	mod_tec_leader_starting_traits_add: "Leader $tec_starting_traits$"
+	mod_tec_admiral_starting_traits_add: "$admiral_with_icon$ $tec_starting_traits$"
+	mod_tec_general_starting_traits_add: "$general_with_icon$ $tec_starting_traits$"
+	mod_tec_governor_starting_traits_add: "$governor_with_icon$ $tec_starting_traits$"
+	mod_tec_scientist_starting_traits_add: "$scientist_with_icon$ $tec_starting_traits$"
+
+	tec_max_negative_traits: "Maximum Negative Traits"
+	mod_tec_leader_negative_traits_add: "Leader $tec_max_negative_traits$"
+	mod_tec_admiral_negative_traits_add: "$admiral_with_icon$ $tec_max_negative_traits$"
+	mod_tec_general_negative_traits_add: "$general_with_icon$  $tec_max_negative_traits$"
+	mod_tec_governor_negative_traits_add: "$governor_with_icon$ $tec_max_negative_traits$"
+	mod_tec_scientist_negative_traits_add: "$scientist_with_icon$ $tec_max_negative_traits$"
+	mod_tec_aiauth_node_negative_traits_add: "$tec_loc_ai_node$ $tec_max_negative_traits$"
+
+	mod_tec_ruler_only_councilor_traits: "$tec_loc_ruler_plural$ can only get $tec_loc_councilor_traits$"
+	mod_tec_councilor_only_councilor_traits: "$tec_loc_councilor_plural$ can only get $tec_loc_councilor_traits$"
+	mod_tec_leader_only_councilor_traits: "Leader can only get $tec_loc_councilor_traits$"
+	mod_tec_leader_only_normal_traits: "Leader can only get $tec_loc_normal_traits$"
+
+	tec_not_count_towards_leader_cap: "not count towards Leader Capacity"
+
+	mod_tec_leader_not_count_towards_leader_cap: "Leader does $tec_not_count_towards_leader_cap$"
+	mod_tec_councilor_not_count_towards_leader_cap: "$tec_loc_councilor_plural$ do $tec_not_count_towards_leader_cap$"
+	mod_tec_admiral_not_count_towards_leader_cap: "$admiral_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
+	mod_tec_general_not_count_towards_leader_cap: "$general_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
+	mod_tec_governor_not_count_towards_leader_cap: "$governor_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
+	mod_tec_scientist_not_count_towards_leader_cap: "$scientist_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
+ # /
+#/
 # Traits
 # ------------------------------------------------------------
  # --------------- Destiny gestalt
