Standardized districts into more inlines for menial, habitation and trade districts

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3422,9 +3422,9 @@
 
 # hab
 
-	tec_mercantile_commercial_enterprise_needs_t2_hab:0 "§HDue to unsuficient infrastructure, $job_merchant_plural$ are not available until we upgrade the habitat.§!"
+	tec_mercantile_commercial_enterprise_needs_t2_hab:0 "§HDue to insufficient infrastructure, $job_merchant_plural$ are not available until we upgrade the habitat.§!"
 
-	tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab:0 "§HDue to unsuficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
+	tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab:0 "§HDue to insufficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
 # Scripted modifiers
 
 	private_hired: "Private/Hired"
