fixed ai auth initialization with mechanist and portrait caching

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -350,6 +350,8 @@
 
 # Ai auth
 
+TEC_AI_RULER_NAME: "[event_target:tec_replaced_ruler.GetName]"
+
 tec_ai_power_balance_negative: "§R[tec_ai_power_balance_value]§!"
 tec_ai_power_balance_neutral: "§Y[tec_ai_power_balance_value]§!"
 tec_ai_power_balance_positive: "§G+[tec_ai_power_balance_value]§!"
