--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -101,7 +101,7 @@ tecniactest.6.desc:0 "create a elysium"
  tec_rebalance.610.tooltip:0 "Allows the customization of the species before starting assembling it."
 
  tec_rebalance.611.name:0 "Robotic Workforce" # Redact lore
- tec_rebalance.611.desc.regular:0 "Regular desc here"
+ tec_rebalance.611.desc.regular:0 "Our new batch of machines is ready; we must decide what kind of body and appearance they would adopt, be it in out image or something else."
  tec_rebalance.611.desc.machicult:0 "Our new batch of blessed machines is ready; we must decide what kind of body and appearance they would adopt, as pure manifestations of the divine."
  tec_rebalance.611.desc.hive:0 "The initial batch of servant mechanical drones has been created. While it may just be non-pragmatic decision, we can alter their physical form to suit the needs of the collective."
  tec_rebalance.611.neutral:0 "Neutral Template"
